# Rust-Email-Newsletter

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  spec.yaml
.sqlx/: query-068ea66d13cc5e58b92bc15d38b6e9be83462ab87dea0894a0c379fa4acfea0f.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230805114958_create_subscriptions_table.sql  20231120133552_create_users_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  smtp_sever.rs  subscription_confimation.rs  subscriptions.rs
