[package]
name = "rust_email_newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust_email_newsletter"

[dev-dependencies]
test-case = "3.1.0"
once_cell = "1.18.0"
claim = "0.5.0"
fake = "2.8.0"
wiremock = "0.5.19"

[dependencies]
actix-web = "4.3.1"
tokio= {version = "1.32.0", features = ["full"]}
serde = { version = "1.0.188", features = ["derive"]}
config = "0.13.3"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.6"
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls"] }
lettre = {version = "0.10.4", features = ["tokio1-native-tls"]}

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]