[package]
name = "rust_email_newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust_email_newsletter"

[dev-dependencies]
test-case = "3.2.1"
once_cell = "1.18.0"
claim = "0.5.0"
fake = "2.9.1"
wiremock = "0.5.19"
mailin-embedded = "0.8.1"
mail-parser = "0.9.1"
humansize = "2.1.3"
base64 = "0.21.5"

[dependencies]
actix-web = "4.4.0"
tokio= {version = "1.34.0", features = ["full"]}
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
config = "0.13.3"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
chrono = "0.4.31"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.8"
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
lettre = {version = "0.11.1", features = ["tokio1-native-tls"]}
rand = { version = "0.8.5", features=["std_rng"] }
sqlx = { version = "0.7.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }